--- a/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
+++ b/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
@@ -3,19 +3,23 @@
     .employeeExpensesList_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        width: 100vw; 
-        height: 130vh;
+        // width: 100vw; 
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
         .employeeExpensesList_wrapper_div{
                     width: 84%;
-                    height: 100vh;
+                    // height: 100vh;
                     padding: 10px 30px 10px 30px;
                     .employeeExpensesList_top_content{
+                        position: relative;
+                        display: flex;
+                        background-color: #fff;
+                        flex-direction: column;
+                        width: 100%;
+                        height: 100%;
                         border: 1px solid #fff;
                         border-radius: 5px;
-                        background-color: #fff;
                         .employeeExpensesList_top_body_cont{
                             background-color: #fff;
                             height: 4rem;
@@ -31,27 +35,37 @@
                             float: right;
                             padding: 40px 70px;
                         }
+                        .employeeExpensesList_edit_submit_btn_cont{
+                            display: flex;
+                            justify-content: center;
+                            position: absolute;
+                            bottom: 2%;
+                            right:  2.5%;
+                        }
                         button.employeeExpensesList_edit_submit_btn {
-                            border: 2px solid #fdd7b3;
-                            padding: 2px 13px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            gap: 1%;
+                            padding: 5px 20px 5px 20px;
                             border-radius: 7px;
-                            background: #2e2eff;
-                            color: white;
+                            margin-top: 6px;
+                            background: #66d1ff;
                         }
                         .employeeExpensesList_mid_body_cont{
-                            height: 118vh;
+                            height: 70vh;
                             .ListButtons_btn{
                                 margin-left: -1.5px;
                             }
                             .employeeExpensesList_table_wrapper{
                                 width: 100%;
-                                height: 80vh;
+                                height: 80%;
                                 overflow-y: auto; 
                                 overflow-x: hidden;
                                 scrollbar-width: thin;
                                 scrollbar-color: #888 #e0e0e0;
                                 @media only screen and (min-width: 1920px){
-                                    height: 85vh;
+                                    height: 60vh;
                                 }
                                 &::-webkit-scrollbar {
                                     width: 8px;
@@ -73,10 +87,12 @@
                                     scrollbar-width: none; 
                                 }
                                 .employeeExpensesList_table_cont.editScrollable {
+                                    // padding: 0px 20px 0px 40px;
+                                    width: 97.5%;
                                     overflow-x: auto;
                                 }
                                 .employeeExpensesList_table_cont{
-                                    padding: 0px 0px 0px 70px;
+                                    padding: 0px 0px 0px 40px;                                    
                                     .table{
                                         width: 97%;
                                         .employeeExpensesList_table_title{
@@ -123,6 +139,8 @@
                                                   }
                                                 .employeeExpensesList_txt0{
                                                     margin-bottom: 5px;
+                                                    padding: 5px;
+                                                    font-weight: bold;
                                                     // text-align: center;
                                                     font-size: 14px;
                                                     // background-color: #C6D4E7;
@@ -132,6 +150,7 @@
                                                 .employeeExpensesList_txt1_txt2_flex{
                                                     margin-top: 10px;
                                                     margin-bottom: 10px;
+                                                    padding: 5px;
                                                     display: flex;
                                                     flex-direction: column;
                                                     .employeeExpensesList_txt1{
