implemented logout function

--- a/client/src/assets/scss/Components/HeaderButtons.scss
+++ b/client/src/assets/scss/Components/HeaderButtons.scss
@@ -8,6 +8,11 @@
         padding: 5px 5px 10px 5px;
         box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     }
+    .logout-icon{
+                font-size: 23px;
+                color: gray;
+                cursor: pointer;
+            }
     .HeaderButtons_header-buttons {
         display: flex;
         gap: 30px;
