fixed margins all screens

--- a/client/src/assets/scss/BusinessDivisions/BusinessDivisionsListAndEdit.scss
+++ b/client/src/assets/scss/BusinessDivisions/BusinessDivisionsListAndEdit.scss
@@ -9,7 +9,7 @@
             flex-direction: column;
         }
         .BusinessDivisionsListAndEdit_maincontent_wrapper{
-            width: 102.5%; // I chaned this so it would align with registration screens
+            width: 100%;
             padding: 10px 30px 10px 30px;
             .BusinessDivisionsListAndEdit_top_content{
                 position: relative;
@@ -22,11 +22,12 @@
                 border-radius: 5px;
                 .BusinessDivisionsListAndEdit_top_body_cont{
                     background-color: #fff;
-                    height: 4rem;
+                    height: 2rem;
                 }
                 button.BusinessDivisionsListAndEdit_mode_switch{
                     position: absolute;
-                    right: 70px;
+                    right: 40px;
+                    top: 45px;
                     border: 1px solid;
                     padding: 3px 21px;
                     border-radius: 5px;
@@ -34,8 +35,9 @@
                     background-color: #f3f3f38b;
                 }
                 .BusinessDivisionsListAndEdit_mode_switch_datalist{
-                    float: right;
-                    padding: 40px 70px;
+                    // float: right;
+                    // padding: 40px 70px;
+                    padding: 1rem;
                 }
                 .BusinessDivisionsListAndEdit_edit_submit_btn_cont{
                     display: flex;
@@ -55,9 +57,9 @@
                     background: #66d1ff;
                 }
                 .BusinessDivisionsListAndEdit_mid_body_cont{
-                    height: 70vh;
+                    height: 100%;
                     .ListButtons_btn{
-                        margin-left: -44px;
+                        // margin-left: -44px;
                     }
                 }
                 .BusinessDivisionsListAndEdit_table_wrapper{
@@ -67,6 +69,7 @@
                     overflow-x: hidden;
                     scrollbar-width: thin;
                     scrollbar-color: #888 #e0e0e0;
+                    padding: 0 40px 0 40px;
                     @media only screen and (min-width: 1920px){
                         height: 60vh;
                     }
@@ -90,9 +93,9 @@
                         scrollbar-width: none; 
                     }
                     .BusinessDivisionsListAndEdit_table_cont{
-                        padding: 0px 0px 0px 40px;
+                        // padding: 0px 0px 0px 0px;
                         table{
-                            width: 97%;
+                            width: 100%;
                             .BusinessDivisionsListAndEdit_table_title{
                                 position: sticky;
                                 top: 0;
@@ -135,10 +138,10 @@
                 }
                 .BusinessDivisionsListAndEdit_is_editing_wrapper{
                     .BusinessDivisionsListAndEdit_is_editing_cont{
-                        display: flex;
-                        justify-content: flex-end;
-                        padding: 20px 20px 0px 20px;
-                        margin: 0px !important;
+                        // display: flex;
+                        // justify-content: flex-end;
+                        // padding: 20px 20px 0px 20px;
+                        // margin: 0px !important;
                     }
                 }
             }
