--- a/client/src/assets/scss/Clients/ClientsListAndEdit.scss
+++ b/client/src/assets/scss/Clients/ClientsListAndEdit.scss
@@ -3,12 +3,12 @@
     .ClientsListAndEdit_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        width: 100vw;
+        // width: 100vw;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
         .ClientsListAndEdit_maincontent_wrapper{
-            width: 84%; // I chaned this so it would align with registration screens
+            width: 100%;
             padding: 10px 30px 10px 30px;
             .ClientsListAndEdit_top_content{
                 position: relative;
@@ -21,11 +21,12 @@
                 border-radius: 5px;
                 .ClientsListAndEdit_top_body_cont{
                     background-color: #fff;
-                    height: 4rem;
+                    height: 2rem;
                 }
                 button.ClientsListAndEdit_mode_switch{
                     position: absolute;
-                    right: 70px;
+                    right: 40px;
+                    top: 45px;
                     border: 1px solid;
                     padding: 3px 21px;
                     border-radius: 5px;
@@ -33,8 +34,9 @@
                     background-color: #f3f3f38b;
                 }
                 .ClientsListAndEdit_mode_switch_datalist{
-                    float: right;
-                    padding: 40px 70px;
+                    // float: right;
+                    // padding: 40px 70px;
+                    padding: 1rem;
                 }
                 .ClientsListAndEdit_edit_submit_btn_cont{
                     display: flex;
@@ -54,9 +56,9 @@
                     }
                 }   
                 .ClientsListAndEdit_mid_body_cont{
-                    height: 70vh;
+                    height: 100%;
                     .ListButtons_btn{
-                        margin-left: 10px;
+                        // margin-left: 10px;
                     }
                 }
                 .ClientsListAndEdit_table_wrapper{
@@ -67,6 +69,7 @@
                     overflow-x: hidden;
                     scrollbar-width: thin;
                     scrollbar-color: #888 #e0e0e0;
+                    padding: 0 40px 0 40px;
                     @media only screen and (min-width: 1920px){
                         height: 60vh;
                     }
@@ -90,9 +93,9 @@
                         scrollbar-width: none; 
                     }
                     .ClientsListAndEdit_table_cont{
-                        padding: 0px 0px 0px 70px;
+                        // padding: 0px 0px 0px 70px;
                         table{
-                            width: 97%;
+                            width: 100%;
                             .ClientsListAndEdit_table_title{
                                 position: sticky;
                                 top: 0;
