--- a/client/src/assets/scss/CostOfSales/CostOfSalesListAndEdit.scss
+++ b/client/src/assets/scss/CostOfSales/CostOfSalesListAndEdit.scss
@@ -3,12 +3,12 @@
     .costOfSalesList_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        width: 100vw; 
+        // width: 100vw; 
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
         .costOfSalesList_btn_wrapper{
-            width: 84%; // I chaned this so it would align with registration screens
+            width: 100%; // I chaned this so it would align with registration screens
             padding: 10px 30px 10px 30px;
             .costOfSalesList_top_content{
                 position: relative;
@@ -21,11 +21,12 @@
                 border-radius: 5px;
                 .costOfSalesList_top_body_cont{
                     background-color: #fff;
-                    height: 4rem;
+                    height: 2rem;
                 }
                 button.costOfSalesList_mode_switch{
                     position: absolute;
-                    right: 70px;
+                    right: 40px;
+                    top: 45px;
                     border: 1px solid;
                     padding: 3px 21px;
                     border-radius: 5px;
@@ -33,8 +34,8 @@
                     background-color: #f3f3f38b;
                 }
                 .costOfSalesList_mode_switch_datalist{
-                    float: right;
-                    padding: 40px 70px;
+                    // float: right;
+                    padding: 1rem;
                 }
                 .costOfSalesList_edit_submit_btn_cont{
                     display: flex;
@@ -54,18 +55,19 @@
                     }
                 }
                 .costOfSalesList_mid_body_cont{
-                    height: 70vh;
+                    height: 100%;
                     .ListButtons_btn{
-                        margin-left: -26px;
+                        // margin-left: 10px;
                     }
                     .costOfSalesList_table_wrapper{
-                        padding: 0px 0px 0px 30px;
                         width: 100%;
                         height: 80%;
                         overflow-y: auto; 
                         overflow-x: hidden;
                         scrollbar-width: thin;
                         scrollbar-color: #888 #e0e0e0;
+                        padding: 0px 40px 0px 40px;
+                        
                         @media only screen and (min-width: 1920px){
                             height: 60vh;
                         }
@@ -91,7 +93,7 @@
                         .costOfSalesList_table_cont{
                             // padding: 0px 0px 0px 20px;
                             table{
-                                width: 97%;
+                                width: 100%;
                                 .costOfSalesList_table_title{
                                     position: sticky;
                                     top: 0;
@@ -149,9 +151,10 @@
                 }
             }
         }
-        .costOfSalesList_table_wrapper.editMode{
-            width: 100% !important; // Adjusted to 84% for edit mode        
-            padding: 0px 0px 0px 30px !important;
+        .costOfSalesList_wrapper.editMode{
+            overflow-x: hidden;
+            // width: 100% !important; // Adjusted to 84% for edit mode        
+            // padding: 0px 0px 0px 30px !important;
         }
     }
 }
