--- a/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
+++ b/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
@@ -9,7 +9,7 @@
             flex-direction: column;
         }
         .EmployeesListAndEdit_maincontent_wrapper{
-            width: 84%; // I changed this so it would align with registration screens
+            width: 100%; 
             padding: 10px 30px 10px 30px;
             .EmployeesListAndEdit_top_content{
                 position: relative;
@@ -22,11 +22,12 @@
                 border-radius: 5px;
                 .EmployeesListAndEdit_top_body_cont{
                     background-color: #fff;
-                    height: 4rem;
+                    height: 2rem;
                 }
                 button.EmployeesListAndEdit_mode_switch{
                     position: absolute;
-                    right: 70px;
+                    right: 40px;
+                    top: 45px;
                     border: 1px solid;
                     padding: 3px 21px;
                     border-radius: 5px;
@@ -34,8 +35,9 @@
                     background-color: #f3f3f38b;
                 }
                 .EmployeesListAndEdit_mode_switch_datalist{
-                    float: right;
-                    padding: 40px 70px;
+                    // float: right;
+                    // padding: 40px 70px;
+                    padding: 1rem;
                 }
                 .EmployeesList_edit_submit_btn_cont{
                     display: flex;
@@ -55,19 +57,19 @@
                     }
                 }
                 .EmployeesListAndEdit_mid_body_cont{
-                    height: 70vh;
+                    height: 100%;
                     .ListButtons_btn{
-                        margin-left: -8px;
+                        // margin-left: -8px;
                     }
                 }
                 .EmployeesListAndEdit_table_wrapper{
-                    padding: 0px 10px 0px 20px;
-                    width: 102.5%;
+                    width: 100%;
                     height: 80%;
                     overflow-y: auto; 
                     overflow-x: hidden;
                     scrollbar-width: thin;
                     scrollbar-color: #888 #e0e0e0;
+                    padding: 0px 40px 0px 40px;
                     @media only screen and (min-width: 1920px){
                     height: 60vh;
                     }
@@ -96,9 +98,8 @@
 
                         }
                     .EmployeesListAndEdit_table_cont{
-                        padding: 0px 20px 0px 20px;
                         table{
-                            width: 97%;
+                            width: 100%;
                             .EmployeesListAndEdit_table_title{
                                 position: sticky;
                                 top: 0;
@@ -140,18 +141,8 @@
                     }
                 }
                 .EmployeesListAndEdit_table_wrapper.editMode{
-                    width: 100% !important; // Adjusted to 84% for edit mode        
-                    // background-color: #e61717 !important;
-                    padding: 0px 16px 0px 20px !important;
+                    overflow-x: hidden
                 }
-                // .EmployeesListAndEdit_is_editing_wrapper{
-                //     .EmployeesListAndEdit_is_editing_cont{
-                //         display: flex;
-                //         justify-content: flex-end;
-                //         padding: 20px 20px 0px 20px;
-                //         margin: 0px !important;
-                //     }
-                // }
             }
         }
     }
