--- a/client/src/assets/scss/Clients/ClientsRegistration.scss
+++ b/client/src/assets/scss/Clients/ClientsRegistration.scss
@@ -69,9 +69,10 @@
                     .ClientsRegistration_ForImplementationOfPlusAndMinus{
                         padding: 0px 0px 10px 0px;
                     }
-                    .ClientsRegistration_ForImplementationOfHorizontalLineBelow{
-                        // border-top: 4px solid rgb(183, 183, 183);
-                        // opacity: 30%;
+                    .ClientsRegistration_ForImplementationOfHorizontalLineBelow-div.ClientsRegistration_form-line{
+                        margin: 0px 20px 0px 20px;
+                        border-top: 4px solid rgb(183, 183, 183);
+                        opacity: 30%;
                     }
                     .ClientsRegistration_form-div{
                         padding: 15px 0px 0px 20px;
