--- a/client/src/assets/scss/Employees/EmployeesRegistration.scss
+++ b/client/src/assets/scss/Employees/EmployeesRegistration.scss
@@ -69,15 +69,13 @@
                         background-color: #555; 
                     }    
                 }
-                .EmployeesRegistration_mid_form_cont{
-                    // margin: 20px 50px;          
-
-                    
+                .EmployeesRegistration_mid_form_cont{                    
                     .EmployeesRegistration_form-content.EmployeesRegistration_ForImplementationOfPlusAndMinus{
                         padding: 0px 0px 10px 0px;
                     }
                     .EmployeesRegistration_form-content.EmployeesRegistration_ForImplementationOfHorizontalLineBelow{
                         border-top: 4px solid rgb(183, 183, 183);
+                        margin: 20px 0px 20px 0px;
                         opacity: 30%;
                     }
                     .EmployeesRegistration_form-content{
