--- a/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
+++ b/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
@@ -7,7 +7,7 @@
             flex-direction: column;
         }
         .expensesList_wrapper{
-            width: 100%; // I chaned this so it would align I am not sure why it needs to be different.
+            width: 100%;
             padding: 10px 30px 10px 30px;
             .expensesList_top_content{
                 position: relative;
@@ -33,8 +33,6 @@
                     background-color: #f3f3f38b;
                 }
                 .expensesList_mode_switch_datalist{
-                    // float: right;
-                    // padding: 40px 70px;
                     padding: 1rem;
                 }
                 .expensesList_mid_body_cont{
@@ -42,12 +40,8 @@
                     background-color: #fff;
                     
                     .ListButtons_btn{
-                        // margin-left: 10px;
                     }
                     .expensesList_table_wrapper{
-                        // padding: 0px 40px 0px 40px !important;
-                        // padding: 0px 16px 0px 20px !important;
-
                         width: 100%;
                         height: 80%;
                         overflow-y: auto; 
@@ -83,7 +77,6 @@
 
                         }
                         .expensesList_table_cont{
-                            // padding: -20px 10px -20px 0px;
                             table{
                                 width: 100%;
                                 .expensesList_table_title{
@@ -131,18 +124,13 @@
                                             border: none;
                                             text-align: center;
                                             input{
-                                                width: 100px;
+                                                width: 70px;
                                             }
                                         }
                                     }
                                 }
                             }
                             .expensesList_table_wrapper.editMode {
-                                // display: flex;
-                                // margin-top: 220px;
-                                // padding: 0px 40px 0px 40px;
-                                // justify-content: flex-start;
-                                // width: 80%; // Adjusted to 80% for edit mode
                             }
                         }
                     }
@@ -159,7 +147,6 @@
                         align-items: center;
                         gap: 1%;
                         padding: 5px 20px 5px 20px;
-                        // padding: 2px 13px;
                         border-radius: 7px;
                         margin-top: 6px;
                         background: #66d1ff;
