--- a/client/src/assets/scss/Expenses/ExpensesRegistration.scss
+++ b/client/src/assets/scss/Expenses/ExpensesRegistration.scss
@@ -34,23 +34,19 @@
                 flex-direction: column;
             }
             .expensesRegistration_form_cont{
-                display: flex;
-                height: 70vh;
-                justify-content: space-between;
-                flex-direction: column;
             }
             .expensesRegistration_mid_body_cont{
                 background-color: #fff;
-                max-height: 90%;
+                height: 90%;
                 @media only screen and (min-width: 1875px){
                     height: 55vh;
                 }
                 .expensesRegistration_mid{
-                    margin: 20px 50px;          
             
                 }
                 .expensesRegistration_mid_form_cont{
                     margin: 0px 40px;
+                    padding: 15px 20px;
                     background-color: #EFEDEA;
                     overflow-y: auto;
                     overflow-x: hidden;
@@ -77,14 +73,14 @@
                         background-color: #555; 
                     }    
                     .expensesRegistration_form-content.expensesRegistration_form-content-special{
-                        padding: 50px 0px 0px 20px;
+                        // padding: 50px 0px 0px 20px;
                     }
                     .expensesRegistration_form-content.expensesRegistration_form-line{
                         border-top: 4px solid rgb(183, 183, 183);
                         opacity: 30%;
                     }
                     .expensesRegistration_form-content{
-                        padding: 0px 0px 10px 20px;
+                        padding: -1px 0px 0px 0px;
                         .expensesRegistration_form-content-div{
                             display: flex;
                             .expensesRegistration_calc{
